# cpp-macos-opengl-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.C2F68AFE62030237.idx  glad.h.A6011CBD1E999F3A.idx  khrplatform.h.43EFB11BAD976F28.idx  main.cpp.28E912AB617E6975.idx
assets/shader/: default.frag  default.vert  default2.frag
src/: ebo.cpp  ebo.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
